# i18nx

./: .gitattributes  Cargo.toml  README.md
.cargo/: config.toml
examples/: demo.rs
examples/assets/localization/: demo.cn.ron  demo.ron  demo.ru.ron
src/: lib.rs
tests/: integration.rs
