[package]
name = "i18nx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Ivan Stepanov <ivanstepanovftw@gmail.com>"]
description = "Elegant internationalization library for Rust."
documentation = "https://docs.rs/i18nx"
repository = "https://github.com/ivanstepanovftw/i18nx"
keywords = ["i18n", "l10n", "format", "template"]
categories = ["internationalization", "translation"]
exclude = [".github", ".idea", ".vscode"]
readme = "README.md"

[dependencies]
once_cell = "1.16"
ron = "0.8"
serde = "1.0"
formatx = "0.1.0"

#[features]
#default = []
#std_once_cell = []
#nightly = ["std_once_cell"]
